k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vn-app
  namespace: vn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vn-app
  template:
    metadata:
      labels:
        app: vn-app
    spec:
      containers:
        - name: vn-app
          image: hauet2017/vn:ceb849b1fd72cb3c213eeb2ff1758131583a406a
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vn-app
  namespace: vn
spec:
  selector:
    app: vn-app
  ports:
    - port: 8080
      targetPort: 8080
